   * Don't allow a 0-sides game to be started (Debian bug #563310)
 * User interface:
   * Switched back to the tiled background for gui2
   * Improved to looks in tiny-gui
   * Add a new transient error message
   * Convert several old style message dialog to the new style
   * Allow listboxes to add rows at every place instead of at the end only
 * Miscellaneous and bugfixes:
   * Fix errors in tutorial when the player unexpectedly kills certain enemy
     units in scenario 2 (bug #15037)
   * Fix orcs being able to play their turn twice in tutorial scenario 2
     (bug #14926)
   * Fix missing dialog in tutorial scenario 1 (patch #1399)
   * Fix scrolling during animation (bug 13106)
   * Fix drakes tipping their wings in the water when flying
   * Fix some assertion failures when showing/hiding listbox items
   * Fixed serveral issues found by cppcheck

Version 1.7.11-1.8beta4:
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Estonian, French, Latvian,
     Lithuanian, Portuguese (Brazil), Russian, Serbian, Slovak, Spanish
   * Manual: updated CSS style to cover Docbook markup for GUI elements
 * User interface:
   * Add a new repeating button widget
   * Scrollbar buttons now keep scrolling when kept pressed down
   * Optimized the speed of the --new-widgets game load dialog
   * Waypoints of multi-turns moves are now saved between reload
 * WML Engine:
   * Rework of semantics of [unit] tags. Added 'placement' attribute.
     Fix bugs #14373, #14444, #14451 and other 'duplicated unit' issues in LoW
 * Miscellaneous and bugfixes:
   * Scrollbar containers now use the button super class
   * Allow a gui2 timer delete itself in its callback
   * Fix various bugs when a unit has more MP than its maximum
   * Fix not redrawing a grid when set to hidden
   * Add helper functions to show/hide rows in a listbox

Version 1.7.10-1.8beta3:
 * Campaigns:
   * Under the Burning Suns: